[package]
name = "gmo_coin"
version = "0.2.8"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2024"
description = "GMOコインのAPI叩くやつ"
license = "MIT"
readme = "README.md"

[features]
default = []
async = ["dep:reqwest"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
serde_derive = "1.0.228"
time = "0.3.47"
ureq = { version = "3.2.0", features = ["json"]}
ring = "0.17.14"
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json", "query", "rustls"] }
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
